# poti

./: CMakeLists.txt  README.md
cmake/: FindPajeNG.cmake  Findlibrastro.cmake
examples/: CMakeLists.txt  README  main_example.c  vite-1.2.c  vite-svn.c
include/: poti.h  poti_events_rastro.h  poti_header_rastro.h
librastro/: .README.md.swp
librastro/src/: rst_read.c
pajeng /: CMakeLists.txt
src/: poti.c  poti_events.c  poti_events_functions.txt  poti_events_rastro.c  poti_header.c  poti_header_functions.txt  poti_header_rastro.c  poti_header_rastro.h  poti_private.h  poti_reader.c
src/converter/: CMakeLists.txt  PajeFlexReader.cc  PajeFlexReader.h  conversor_structs.c  conversor_structs.h  main.c  main.cc  main.h  parser.y  poti_converter.c  poti_private_original.h  scanner.l
src/paje2rst/: CMakeLists.txt  conversor_structs.c  conversor_structs.h  main.c  main.h  parser.y  scanner.l
src/rst2paje/: CMakeLists.txt  rst2paje.c
traces/: categories_converted.trace  ms_converted.trace  rastro-5-5-categories.rst  rastro-5-5-ms.rst
